--- a/src/components/NavigationBar/NavbarStyles.module.css
+++ b/src/components/NavigationBar/NavbarStyles.module.css
@@ -9,7 +9,7 @@
     color: white;
     font-size: 15px;
     margin-right: 10px;
-    font-weight: 600;
+    font-weight: 500;
     letter-spacing: 2px;
     text-transform: uppercase;
     padding: 5px;
@@ -21,7 +21,7 @@
     width: 240px;
     text-align: center;
     text-decoration: none;
-    color: #242A35;
+    color: white;
     font-weight: 500;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -33,6 +33,7 @@
 
 .navLinkItems:hover, .navMenuList:hover {
     background-color: #FCB51D;
+    color: #242A35;
 }
 
 /* Navbar mobile */
