--- a/src/components/Contact/ContactStyles.module.css
+++ b/src/components/Contact/ContactStyles.module.css
@@ -25,7 +25,7 @@
     padding: 0 28px;
     position: relative;
     bottom: .6em;
-    margin-right: .2em;
+    margin-right: .3em;
     border-bottom: 4px solid white;
 }
 
@@ -45,4 +45,26 @@
 /* apply margin-top 2nd row */
 .contactInfo:nth-child(2) {
     margin-top: 34px;
+}
+
+@media only screen and (max-width: 480px) {
+    .contactSection {
+        height: auto;
+    }
+
+    .contactImg {
+        position: relative;
+        width: 130%;
+        right: 13%;
+        bottom: 3em;
+    }
+
+    .contactUnderline span {
+        padding: 0 20px;
+    }
+
+    .contactInfo {
+        position: relative;
+        bottom: 5em;
+    }
 }
