--- a/src/components/MySkills/SkillsStyles.module.css
+++ b/src/components/MySkills/SkillsStyles.module.css
@@ -26,7 +26,7 @@
     padding: 0 28px;
     position: relative;
     bottom: .6em;
-    margin-right: .2em;
+    margin-right: .3em;
     border-bottom: 4px solid white;
 }
 
@@ -156,4 +156,37 @@
     color: white;
     padding: 2px 6px;
     border-radius: 3px;
+}
+
+@media only screen and (max-width: 480px) {
+    .skillsText {
+        padding-top: 0rem;
+        position: relative;
+        width: 80%;
+        left: 3em;
+    }
+
+    .skillUnderline span {
+        padding: 0 20px;
+    }
+
+    .overlaySkillHeading {
+        position: relative;
+        right: .8em;
+    }
+
+    .skillBarContent {
+        position: relative;
+        right: 3.4em;
+        bottom: 2em;
+    }
+
+    .skillBarItemTwo {
+        position: relative;
+        left: 6em;
+    }
+
+    .skillBox .skillBar {
+        width: 80%;
+    }
 }
